# label_bro_rs

./: .gitignore  CHECKLIST.md  Cargo.toml  IMPLEMENTATION.md  README.md  ROADMAP.md  aider-files-rust  aider-load.txt
.aider/: aider.chat.history.md  aider.input.history  aider.llm.history
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.cargo/: config.toml
docs/: PYO3.md
label_bro_py/: README.md
label_bro_py/label_bro/: .gitignore  app.py  cli.py
label_bro_py/label_bro/static/css/: style.css
label_bro_py/label_bro/static/js/: app.js
label_bro_py/label_bro/templates/: base.html  index.html
label_bro_py/label_bro/tests/: test_app.py  test_cli.py  test_integration.py  test_printer_integration.py
label_bro_py/label_bro/utils/: __init__.py  backends_network.py  backends_quicksnmp.py  brother_ql_backends.py  label_creation.py  printer_utils.py
src/: lib.rs  main.rs  python_bridge.rs  routes.rs
src/handlers/: ai.rs  label.rs  mod.rs
src/models/: ai.rs  label.rs
src/utils/: image.rs  mod.rs  printer.rs
tests/: integration_test.rs  test_handlers.rs  test_models.rs
