[package]
name = "label_bro_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
tera = "1.12"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
actix = "0.13.5"  # Updated to latest version
image = "0.25.5"  # Updated to latest version
base64 = "0.22.1" # Updated to latest version
pyo3 = { version = "0.24.0", features = ["abi3", "auto-initialize"] } # Updated to latest version
